--- a/template/java8-http/pom.xml
+++ b/template/java8-http/pom.xml
@@ -14,6 +14,28 @@
     </modules>
     <packaging>pom</packaging>
 
+    <properties>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <mockito.version>3.3.3</mockito.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
