--- a/template/java8-http/entrypoint/pom.xml
+++ b/template/java8-http/entrypoint/pom.xml
@@ -47,7 +47,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.kylin.openfaas.HttpServer</mainClass>
+                                    <mainClass>org.kylin.openfaas.entrypoint.HttpServer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
